--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             notes: [
               'Just a comment',
               'Hello World',
-              'Ilya',
+              'Sample text',
               'Some new text'
             ]
           }
